# node-aead-crypto

./: .gitignore  .npmignore  .travis.yml  .yarnrc.yml  Cargo.toml  README.md  appveyor.yml  binding.gyp  build.rs  index.d.ts  index.js  lib.js  mod.d.ts  mod.js  node-aead-crypto.win32-x64-msvc.node  package-lock.json  package.json
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: CI.yml  codeql-analysis.yml
ci/: prebuild.js
lib/: install.js  preinstall.js
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: addon.cc  lib.rs  node-aes-ccm.cc  node-aes-ccm.h  node-aes-gcm.cc
test/: test.mjs  test_aes-ccm.js  test_aes-ccm.js_  test_aes-gcm.js  test_aes-gcm.js_
