[package]
edition = "2021"
name = "node-aead-crypto"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
aes = "0.8.2"
aes-gcm = "0.10.1"
anyhow = "1.0.68"
ccm = "0.5.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.0.2", default-features = false, features = ["napi4"] }
napi-derive = "2.0.1"
paste = "1.0.11"

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
opt-level = 3
